<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clayoutMisNotas"
    android:theme="@style/Theme.Organisation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MisNotasActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:fontFamily="@font/ocra"
        android:text="@string/mis_notas"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMisNotas"
        android:layout_width="366dp"
        android:layout_height="485dp"
        app:layout_constraintBottom_toTopOf="@+id/fabN2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscarMisNotas"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/tvEmptyMisNotas"
        android:layout_width="115dp"
        android:layout_height="65dp"
        android:layout_marginEnd="148dp"
        android:gravity="center"
        android:text="@string/no_hay_notas_crea_una"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506" />

    <ImageView
        android:id="@+id/ivImagenEmptyMisNotas"
        android:layout_width="148dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333"
        android:visibility="gone"
        app:srcCompat="@drawable/outline_info_24" />

    <Button
        android:id="@+id/buttonEmptyCrearNuevaMisNotas"
        android:layout_width="205dp"
        android:layout_height="41dp"
        android:gravity="center"
        android:text="@string/crear"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabN2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:theme="@style/Theme.OrganisationBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868"
        app:srcCompat="@drawable/outline_task_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabN1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868"
        app:srcCompat="@drawable/outline_note_24" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868"
        app:srcCompat="@drawable/outline_add_24" />

    <SearchView
        android:id="@+id/buscarMisNotas"
        android:layout_width="378dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.016" />

</androidx.constraintlayout.widget.ConstraintLayout>